# aoa_converter

./: .gitignore  CMakeLists.txt
CMakeModules/: Find3rdPartyDependencies.cmake  FindFBX.cmake
applications/osgconv/: CMakeLists.txt  ConvertTexturesVisitor.cpp  ConvertTexturesVisitor.h  osgconv.cpp
src/osg/: DisplaySettings.cpp
src/osgPlugins/: CMakeLists.txt
src/osgPlugins/aoa/: CMakeLists.txt
src/osgPlugins/aoa/configs/: aoa.config.json  object_lights.json
src/osgPlugins/aoa/headers/: add_lights_visitor.h  aoa_to_osg.h  aoa_to_osg_data.h  attribute_operations.h  aurora_aoa_reader.h  aurora_aoa_writer.h  aurora_data_buffer_writer.h  aurora_format.h  aurora_lights_format.h  aurora_mesh_subdivider.h  aurora_processor_traits.h  aurora_read_processor.h  aurora_write_processor.h  convert_textures_visitor.h  debug_utils.h  fix_materials_visitor.h  geometry_visitor.h  intrin_emu.h  json_io.h  lights_generation_visitor.h  material_loader.h  mathlib.h  mathlib_double.h  mathlib_float.h  object_lights_config.h  packed.h  plugin_config.h  stdafx.h  tesselate_visitor.h  tree.h  vao.h  write_aoa_visitor.h  writer_visitor.h
src/osgPlugins/aoa/sources/: ReaderWriterAOA.cpp  aoa_to_osg.cpp  aurora_aoa_reader.cpp  aurora_aoa_writer.cpp  aurora_aoa_writer_node.cpp  aurora_mesh_subdivider.cpp  convert_textures_visitor.cpp  fix_materials_visitor.cpp  geometry_visitor.cpp  json_io.cpp  lights_generation_visitor.cpp  material_loader.cpp  object_lights_config.cpp  plugin_config.cpp  tesselate_visitor.cpp  write_aoa_visitor.cpp  writer_visitor.cpp
src/osgPlugins/btx/: CMakeLists.txt  ReaderWriterBTX.cpp  btx_to_dds.cpp  btx_to_dds.h  dds.h  glext.h  sampler.cpp  sampler.h
src/osgPlugins/fbx/: CMakeLists.txt  WriterNodeVisitor.cpp  WriterNodeVisitor.h  fbxCustomDefs.h  fbxMaterialToOsgStateSet.h  fbxRMesh.cpp  fbxRNode.cpp  fbxReader.h  fbxUtils.h
src/osgPlugins/ifl/: CMakeLists.txt  ReaderWriterIFL.cpp
tools/: arsc_to_fbx.py  convert_back_to_aoa.py  convert_models.py  fbx_to_arsc.py  models_stats.py  models_stats_2.py  process_stats.py
