INCLUDE_DIRECTORIES(${FBX_INCLUDE_DIR})

SET(TARGET_SRC
    fbxRAnimation.cpp
    fbxRCamera.cpp
    fbxRLight.cpp
    fbxRMesh.cpp
    fbxRNode.cpp
    ReaderWriterFBX.cpp
    WriterCompareTriangle.cpp
    WriterNodeVisitor.cpp
    fbxMaterialToOsgStateSet.cpp
)

SET(TARGET_H
    fbxMaterialToOsgStateSet.h
    fbxReader.h
    ReaderWriterFBX.h
    WriterCompareTriangle.h
    WriterNodeVisitor.h
)

IF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    REMOVE_CXX_FLAG(-pedantic)
    REMOVE_CXX_FLAG(-Wall)
    REMOVE_CXX_FLAG(-Wunused)
    REMOVE_CXX_FLAG(-Wextra)
ENDIF()

IF(WIN32)
    OPTION(FBX_SHARED OFF)
    IF(FBX_SHARED)
        ADD_DEFINITIONS(-DFBXSDK_SHARED)
    ENDIF(FBX_SHARED)

    SET(TARGET_EXTERNAL_LIBRARIES wininet)
ENDIF(WIN32)

IF(APPLE)
    FIND_LIBRARY(SYS_CONFIG_LIBRARY SystemConfiguration )
    MARK_AS_ADVANCED(SYS_CONFIG_LIBRARY)
    SET(TARGET_EXTERNAL_LIBRARIES iconv ${SYS_CONFIG_LIBRARY})
ENDIF(APPLE)


GET_FILENAME_COMPONENT(FBX_LIBRARY_DIR_DEBUG ${FBX_LIBRARY_DEBUG} DIRECTORY)
FIND_LIBRARY(FBX_ZLIB_LIBRARY_DEBUG "zlib-md"
    PATHS ${FBX_LIBRARY_DIR_DEBUG})
FIND_LIBRARY(FBX_LIBXML2_LIBRARY_DEBUG "libxml2-md"
    PATHS ${FBX_LIBRARY_DIR_DEBUG})

GET_FILENAME_COMPONENT(FBX_LIBRARY_DIR ${FBX_LIBRARY} DIRECTORY)
FIND_LIBRARY(FBX_ZLIB_LIBRARY "zlib-md"
    PATHS ${FBX_LIBRARY_DIR})
FIND_LIBRARY(FBX_LIBXML2_LIBRARY "libxml2-md"
    PATHS ${FBX_LIBRARY_DIR})

SET(TARGET_LIBRARIES_VARS FBX_LIBRARY FBX_ZLIB_LIBRARY FBX_LIBXML2_LIBRARY)
SET(TARGET_ADDED_LIBRARIES osgAnimation)

#### end var setup  ###
SETUP_PLUGIN(fbx)
